# Blink

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
docs/: FRONTEND_INTEGRATION.md  LOCAL_VERIFICATION.md
frontend/: blink_api_client.js
frontend/prototype/: kidschat_demo.py
migrations/: 001_core_identity.sql  002_social_graph.sql  003_groups.sql  004_parent_policies.sql  005_audit_events.sql  006_messages.sql  007_media.sql  008_group_billing_state.sql  009_onboarding.sql
scripts/: run_expiration.py  run_migrations.py
src/blink/: audit.py  config.py  db.py  errors.py  ids.py  pricing.py  types.py
src/blink/api/: app.py  deps.py  errors.py  schemas.py
src/blink/auth/: context.py  dev_bypass.py  resolver.py
src/blink/authz/: require.py
src/blink/obs/: logging.py  metrics.py  middleware.py
src/blink/onboarding/: adapters.py  codes.py
src/blink/policies/: parent.py
src/blink/r2/: adapter.py
src/blink/rate_limit/: deps.py  limiter.py
src/blink/repos/: billing.py  consent.py  friends.py  group_requests.py  groups.py  media.py  messages.py  parent_invites.py  users.py
src/blink/services/: approval_service.py  billing_service.py  expiration_service.py  friend_service.py  group_service.py  (+3 more)
tests/: conftest.py  test_approvals.py  test_authz.py  test_billing.py  test_expiration.py  test_expiration_cascade.py  test_friend_flow.py  test_group_flow.py  test_image_messages.py  test_me.py  test_media_flow.py  test_message_flow.py  test_observability.py  test_onboarding.py  test_rate_limit.py  test_tier_enforcement.py
(+8 files in other folders)
